fix: fix ManageOrders and ManageUsers heading to be at the top regardless of the table not being visible

--- a/client/src/styles/pages/admin_pages/_manage_orders.scss
+++ b/client/src/styles/pages/admin_pages/_manage_orders.scss
@@ -42,7 +42,7 @@ $img-tablet-margin-right:   1.25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     max-width: $max-container-width;
     margin: $container-margin;
@@ -118,6 +118,7 @@ $img-tablet-margin-right:   1.25rem;
     margin-top: $vertical-spacing;
     width: 100%;
     overflow-x: auto;
+    min-height: 300px;
 
     h2 {
       margin-bottom: $gap;
